update photo portfolio

--- a/index.html
+++ b/index.html
@@ -140,11 +140,14 @@
 
                </div>
 
-               <div class="hero-image">
+               <div class="about-left">
 
-                  <img src="assets/img/blog-img/face_new.jpg" style="margin-left: 200px;margin-top: 70px" width="350"
-                     height="350" alt="place img">
+                  <img src="assets/img/blog-img/face_new.jpg"  width="350"
+                     height="350" alt="place img" class="style_img">
                </div>
+
+
+
             </div>
          </div>
       </section>
