--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                      <div class="skillbar-bar"></div>
                      <div class="skill-bar-percent"></div>
                      REST API, Node.js, Express.js, Vue.js, Cutelyst (C++), JavaScript, HTML 5, CSS 3, PHP, Ajax,
-
-                     Bootstrap, Twig, Wordpress, Drupal, and Magento
+                     Bootstrap 
+                  <!--Twig, Wordpress, Drupal, and Magento -->
                   </div>
                </div>
             </div>
