update contact part

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                      <li><a href="#experience">Experience</a>
                      </li>
 
-                     <li><a href="#contact">CONTACT</a>
-                     </li>
+                     <!--<li><a href="#contact">CONTACT</a>
+                     </li> -->
 
                      <li><a href="https://github.com/Khaledjallouli" target="_blank"><span class="ti-github"></span></a>
                      </li>
