--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="row">
                <div class="col-md-7">
                   <div class="slider-text"> <span class="intro">hello</span>
-                     <h1>I’m <span>Khaled</span> Jallouli</h1>
+                     <h1>I am <span>Khaled</span> Jallouli</h1>
                      <p> Software Engineer Student Specialized in Data Science at Technische Hochschule Ulm, Germany
                         and École nationale d'ingénieurs de Brest, France.<br>
                      <p>I am about to graduate and looking for a job opportunity from April 1, 2021, in the field of Data Science.</p>
