--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                   <a href="https://www.kamag.com/" target="_blank">
                      <h4>KAMAG Transporttechnik in Ulm, Germany</h4>
                   </a> <br>
-                  <button style="float: right;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#kamag">
+                  <button id="buttons_internship" style="float: right;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#kamag">
   More
 </button>
                </div>
