add all buttons internships

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                   </p>
                   <a href="https://www.kamag.com/" target="_blank">
                      <h4>KAMAG Transporttechnik in Ulm, Germany</h4>
-                  </a> <br>
+                  </a> 
                   <button id="buttons_internship" style="float: right;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#kamag">
   More
 </button>
@@ -673,13 +673,14 @@
                <div class="resume-content mb-30 ml-40" style="height: 280px"> <span class="resume-date">February - July
                      2019</span>
                   <h3><img src="assets/img/brand-icons/brand-2.png" alt="place img"> Software Engineer Intern</h3>
-                  <p> Setting up a server and developing a responsive web interface for a tightening controller to make
-                     the
-                     configuration of the system using a web browser.
+                  <p> Developing a responsive web interface for a tightening controller
                   </p>
                   <a href="https://www.desouttertools.com/" target="_blank">
                      <h4>CP Georges Renault in Nantes, France</h4>
                   </a>
+                   <button id="buttons_internship" style="float: right;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#desoutter">
+  More
+</button>
                </div>
 
 
@@ -687,13 +688,15 @@
                <div class="resume-content mb-30 ml-40" style="height: 280px"> <span class="resume-date">June - August
                      2018</span>
                   <h3><img src="assets/img/brand-icons/brand-2.png" alt="place img">Web Development Intern</h3>
-                  <p> Development of a website that references existing Business-to-Business events such as webinars and
-                     conferences.
+                  <p> Development of a website that references existing B-to-B events.
 
                   </p>
                   <a href="https://www.leads-generation.fr/" target="_blank">
                      <h4>Leads Generation in Concarneau, France</h4>
                   </a>
+                   <button id="buttons_internship" style="float: right;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#leads">
+  More
+</button>
                </div>
 
                <div class="resume-content mb-30 ml-40" style="height: 280px"> <span class="resume-date">June - August
@@ -705,18 +708,22 @@
                   <a href="http://www.ccatunisie.com/" target="_blank">
                      <h4>BR&T in Tunis, Tunisia</h4>
                   </a>
-
+ <button id="buttons_internship" style="float: right;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#brt">
+  More
+</button>
                </div>
 
                <div class="resume-content mb-30 ml-40" style="height: 280px"> <span class="resume-date"> January - May
                      2017</span>
                   <h3><img src="assets/img/brand-icons/brand-2.png" alt="place img">Web Development Intern</h3>
                   <br>
-                  <p>Development of a learning management platform to manage courses, submit assignments and check
-                     grades. </p>
+                  <p>Development of a learning management platform. </p>
                   <a href="http://www.arzensystems.com/" target="_blank">
                      <h4>Arzen Systems in Ankara, Turkey</h4>
                   </a>
+                   <button id="buttons_internship" style="float: right;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#arzen">
+  More
+</button>
                </div>
 
 
@@ -969,7 +976,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Data Science Intern (Master Thesis)</h5> 
-         KAMAG Transporttechnik in Ulm, Germany
+         KAMAG Transporttechnik in Ulm, Germany <br>
+         Since Aug. 2020
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -1001,6 +1009,157 @@ Mining, Python, Pandas, Matplotlib, Seaborn, Numpy, Tensorflow, GitHub, and LaTe
   </div>
 </div>
 
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="desoutter" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Software Engineer Intern</h5> 
+         CP Georges Renault, Nantes, France <br>
+         Feb. 2019 – Jul. 2019
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       Setting up a server and developing a responsive web interface for a tightening controller to make the
+configuration of the system using a web browser.
+ <br> <br>
+<div class="list-group">
+
+   <a href="#" class="list-group-item list-group-item-action">  Design a web architecture that meets the company constraints.
+</a>
+  <a href="#" class="list-group-item list-group-item-action"> Compare the web technologies and select the most efficient solution adapted to the constraints. </a>
+   <a href="#" class="list-group-item list-group-item-action"> Develop the back-end and the front-end of the prototype, then integrates them into the tightening
+controller.</a>
+   <a href="#" class="list-group-item list-group-item-action"> Write a technical report. </a>
+   <a href="#" class="list-group-item list-group-item-action"> Used technologies: API REST, Cutelyst, Vue.js, JSON, NGINX, Responsive Web Design (Adobe XD),
+Scrum, and SVN. </a>
+ 
+</div>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="leads" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Web Development Intern</h5> 
+         Leads Generation, Concarneau, France <br>
+         Jun. 2018 – Aug. 2018
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+         Development of a website that references existing Business-to-Business events such as webinars and
+conferences.
+ <br> <br>
+<div class="list-group">
+
+   <a href="#" class="list-group-item list-group-item-action"> Define the main functionalities and create a sitemap. </a>
+  <a href="#" class="list-group-item list-group-item-action">  Install CMS plugins and implement a responsive website. </a>
+   <a href="#" class="list-group-item list-group-item-action"> Upload the website to a server.</a>
+   <a href="#" class="list-group-item list-group-item-action"> Used technologies: Drupal 7, HTML 5, CSS 3, PHP, Twig, JavaScript, JQuery, OVH, and Mailchimp. </a>
+   
+</div>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="brt" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Web Development Intern</h5> 
+         BR&T, Tunis, Tunisia <br>
+         Jun. 2017 – Aug. 2017
+
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+     Development of a website presenting the start-up CCA Tunisia.
+<br> <br>
+<div class="list-group">
+
+   <a href="#" class="list-group-item list-group-item-action"> Install CMS plugins and implement a responsive website. </a>
+  <a href="#" class="list-group-item list-group-item-action"> Keep the website up-to-day. </a>
+   <a href="#" class="list-group-item list-group-item-action"> Used technologies: WordPress, HTML 5, CSS 3, PHP, and Mailjet.</a>
+   
+</div>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="arzen" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">
+
+        Web Development Intern
+
+</h5> 
+         Arzen Systems, Ankara, Turkey <br>
+         Jan. 2017 – May 2017
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       Development of a learning management platform to manage courses, submit assignments and check grades.
+        <br> <br>
+<div class="list-group">
+
+   <a href="#" class="list-group-item list-group-item-action"> Define the functionalities to implement using UML diagrams.</a>
+  <a href="#" class="list-group-item list-group-item-action"> Develop a dynamic platform and write a technical report. </a>
+   <a href="#" class="list-group-item list-group-item-action"> Used technologies: UML, PHP, MySQL, JavaScript, HTML 5, CSS 3, Bootstrap, and AJAX.</a>
+  
+</div>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
