--- a/index.html
+++ b/index.html
@@ -333,11 +333,11 @@
                   </div>
                </div>
                <div class="skillbar  on-scroll mb-0 clearfix " data-percent="70%" data-scroll-class="active">
-                  <div class="skillbar-title"><span style="margin-top: 20px;">Software Tools</span>
+                  <div class="skillbar-title"><span style="margin-top: 20px;">Development Tools</span>
                   </div>
                   <div class="skillbar-bar"></div>
                   <div class="skill-bar-percent"></div>
-                  Qt Creator, Visual Studio, Eclipse, Matlab, and Scilab
+                  Anaconda, RStudio, Qt Creator, Visual Studio, and Eclipse 
                </div>
             </div>
          </div>
