--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                      <h1>I am <span>Khaled</span> Jallouli</h1>
                      <p> Software Engineer Student Specialized in Data Science at Technische Hochschule Ulm, Germany
                         and École nationale d'ingénieurs de Brest, France.<br>
-                     <p>I am about to graduate and looking for a job opportunity from April 1, 2021, in the field of Data Science.</p>
+                     <p>I am about to graduate and looking for a job opportunity from April 5, 2021, in the fields of Software Engineering, Web Development, Data Science, and/or Machine Learning.</p>
                      </p>
                      <div style="margin: 20px;float: right;"><a href="assets/CV/CV_Khaled_Jallouli.pdf"
                            class="comman-btn download-btn" download>DOWNLOAD CV <img
@@ -197,7 +197,7 @@
 
                      I am also a master student in Software Engineering at the National School of Engineering Brest, France. <br>
 
-                     Both degrees are expected for February 2021.
+                     Both degrees are expected for March 2021.
 
                   </p>
                   <p>
