--- a/index.html
+++ b/index.html
@@ -128,9 +128,8 @@
                <div class="col-md-7">
                   <div class="slider-text"> <span class="intro">hello</span>
                      <h1>I am <span>Khaled</span> Jallouli</h1>
-                     <p> Software Engineer Student Specialized in Data Science at Technische Hochschule Ulm, Germany
-                        and École nationale d'ingénieurs de Brest, France.<br>
-                     <p>I am about to graduate and looking for a job opportunity from April 5, 2021, in the fields of Software Engineering, Web Development, Data Science, and/or Machine Learning.</p>
+                     <p> Junior Software Engineer at PreciBake GmbH, Munich, Germany.<br> 
+                     Graduated on March 10, 2021 from Technische Hochschule Ulm, Germany and École nationale d'ingénieurs de Brest, France.
                      </p>
                      <div style="margin: 20px;float: right;"><a href="assets/CV/CV_Khaled_Jallouli.pdf"
                            class="comman-btn download-btn" download>DOWNLOAD CV <img
@@ -192,13 +191,7 @@
                <div class="about-right">
                   <h2>About Me</h2>
                   <p>
-                     I am a student at Technische Hochschule Ulm, Germany pursuing my master degree in Information Systems
-                     with a significant background in Predictive Analytics and Intelligent Systems.
-
-                     I am also a master student in Software Engineering at the National School of Engineering Brest, France. <br>
-
-                     Both degrees are expected for March 2021.
-
+                     I studied at Technische Hochschule Ulm, Germany pursuing a master degree in Information Systems with a significant background in Data Science and Intelligent Systems. I also studied a master degree in Software Engineering at the National School of Engineering Brest, France. <br>
                   </p>
                   <p>
                      Experienced in Object-Oriented Programming; developing, testing and debugging code; and designing
@@ -207,11 +200,6 @@
                      Quickly learn and master new technologies, successful working in both teams and self-directed
                      environments.
                   </p>
-
-
-
-
-
 
 
                </div>
@@ -464,7 +452,7 @@
             <div class="service-teatimonial-single-item">
                <div class="service-teatimonial-item-inner"> <span class="ti-book"></span>
                   <h4>Master in Information Systems</h4>
-                  <h5>Since October 2019</h5> <br>
+                  <h5>October 2019 - March 2021</h5> <br>
 
                   <a href="https://www.hs-ulm.de/en/" target="_blank">
                      <h4> Technische Hochschule Ulm, Germany </h4>
@@ -475,7 +463,7 @@
             <div class="service-teatimonial-single-item">
                <div class="service-teatimonial-item-inner"> <span class="ti-book"></span>
                   <h4>Master in Software Engineering</h4>
-                  <h5>Since September 2017</h5> <br>
+                  <h5>September 2017 - March 2021</h5> <br>
 
                   <a href="https://www.enib.fr/" target="_blank">
                      <h4>National School of Engineering Brest, France</h4>
@@ -1569,7 +1557,7 @@ conferences.
                      </li>
 
                      <li>
-                        <p>Ulm, Germany</p>
+                        <p>Munich, Germany</p>
                      </li>
                      <li>
                         <p> jallouli.khaled@yahoo.fr</p>
@@ -1604,7 +1592,7 @@ conferences.
          <div class="row">
             <div class="col-md-12">
                <div class="footer-bottom-text">
-                  <p>Copyright © 2020 , All rights Reserved.
+                  <p>Copyright © 2021 , All rights Reserved.
                      <!--<br>Created by <a href="#" class="theme-info"></a></p> -->
                </div>
             </div>
