--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                <div class="col-md-7">
                   <div class="slider-text"> <span class="intro">hello</span>
                      <h1>I am <span>Khaled</span> Jallouli</h1>
-                     <p> Junior Software Engineer at PreciBake GmbH, Munich, Germany.<br> 
+                     <p> Software Engineer at PreciBake GmbH, Munich, Germany.<br> 
                      Graduated on March 10, 2021 from Technische Hochschule Ulm, Germany and École nationale d'ingénieurs de Brest, France.
                      </p>
                      <div style="margin: 20px;float: right;"><a href="assets/CV/CV_Khaled_Jallouli.pdf"
@@ -191,14 +191,15 @@
                <div class="about-right">
                   <h2>About Me</h2>
                   <p>
-                     I studied at Technische Hochschule Ulm, Germany pursuing a master degree in Information Systems with a significant background in Data Science and Intelligent Systems. I also studied a master degree in Software Engineering at the National School of Engineering Brest, France. <br>
+                         As a Software Engineer at PreciBake, I implement microservices using Django and FastAPI, define RESTful APIs using Swagger, and deploy applications with Docker, 
+			  Podman and Kubernetes. <br>
+			  I also collaborate with frontend engineers, write technical documentation, and follow PEP8 coding style and Trunk-based development.
+
                   </p>
                   <p>
-                     Experienced in Object-Oriented Programming; developing, testing and debugging code; and designing
-                     interfaces. <br>
+                   I studied at Technische Hochschule Ulm, Germany pursuing a master degree in Information Systems with a significant background in Data Science and Intelligent Systems. <br> 
+			  I also studied a master degree in Software Engineering at the National School of Engineering Brest, France. <br>
 
-                     Quickly learn and master new technologies, successful working in both teams and self-directed
-                     environments.
                   </p>
 
 
